feat: add metadata

--- a/build_local/index.html
+++ b/build_local/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A weekly email newsletter of notable upcoming events, curated by the Forekast.com community, and delivered right to your inbox!">
+    <meta name="author" content="Forekast">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>The Weekly Forekast | A list of the best things happening every week.</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -40,11 +40,11 @@
 <p class="how-it-works">How It Works: The <a href="https://www.forekast.com">Forekast</a> community post and votes on interesting upcoming events and we handpick the best ones and deliver them straight to your inbox!</p>
 
 <section class="syndication">
-  <img src="images/product-hunt.png">
-  <img src="images/reddit.png">
-  <img src="images/laughing-squid.png">
-  <img src="images/lifehacker.png">
-  <img src="images/awesomer.png">
+  <a href="http://www.producthunt.com/posts/forekast" target="_blank"><img src="images/product-hunt.png"></a>
+  <a href="http://www.reddit.com/r/YouShouldKnow/comments/2pdbz1/ysk_theres_a_crowdsourced_calendar_of_the/" target="_blank"><img src="images/reddit.png"></a>
+  <a href="http://laughingsquid.com/forekast-a-crowdsourced-calendar-that-aggregates-television-online-and-real-world-events/" target="_blank"><img src="images/laughing-squid.png"></a>
+  <a href="http://lifehacker.com/forekast-is-a-calendar-full-of-live-events-tv-debuts-1679784726" target="_blank"><img src="images/lifehacker.png"></a>
+  <a href="http://theawesomer.com/forekast/307763/" target="_blank"><img src="images/awesomer.png"></a>
 </section>
 
 <p class="sample">Still not convinced? Check out an <a href="http://us3.campaign-archive1.com/?u=9305570dd7f6062d4290cde95&id=d35d3d82d6&e=4caa488b08">example email</a>.</p>
