--- a/build_local/index.html
+++ b/build_local/index.html
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-<p class="how-it-works">How It Works: The <a href="https://www.forekast.com">Forekast</a> community post and votes on interesting upcoming events and we handpick the best ones and deliver them straight to your inbox!</p>
+<p class="how-it-works">How It Works: The <a href="https://www.forekast.com">Forekast</a> community posts and votes on interesting upcoming events and we handpick the best ones and deliver them straight to your inbox!</p>
 
 <section class="syndication">
   <a href="http://www.producthunt.com/posts/forekast" target="_blank"><img src="images/product-hunt.png"></a>
